--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
-    "node-fetch": "^3.3.2" 
+    "node-fetch": "^3.3.2",
+    "uuid": "^9.0.1" 
   },
   "devDependencies": {
     "vite": "^5.3.3" 
